--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/nettalk?serverTimezone=UTC&cha
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql: true
+## App Properties
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
